--- a/SpatialCheckPro/SpatialCheckPro.csproj
+++ b/SpatialCheckPro/SpatialCheckPro.csproj
@@ -54,8 +54,8 @@
   <ItemGroup>
     <!-- 핵심 비즈니스 로직 패키지 -->
     <PackageReference Include="CsvHelper" Version="33.1.0" />
-    <PackageReference Include="GDAL" Version="3.10.3" />
-    <PackageReference Include="GDAL.Native" Version="3.10.3" />
+    <PackageReference Include="MaxRev.Gdal.Core" Version="3.10.0.306" />
+    <PackageReference Include="MaxRev.Gdal.WindowsRuntime.Minimal" Version="3.10.0.306" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.NetTopologySuite" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
