--- a/SpatialCheckPro.GUI/SpatialCheckPro.GUI.csproj
+++ b/SpatialCheckPro.GUI/SpatialCheckPro.GUI.csproj
@@ -64,10 +64,10 @@
     
     <!-- 지오메트리 처리 -->
     <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="4.0.0" />
-    <PackageReference Include="PdfSharp-MigraDoc" Version="6.2.1" />
+    <PackageReference Include="PDFsharp-MigraDoc-WPF" Version="6.2.3" />
     
     <!-- PDF 생성 -->
-    <PackageReference Include="iTextSharp.LGPLv2.Core" Version="3.4.21" />
+    <PackageReference Include="iTextSharp.LGPLv2.Core" Version="3.7.12" />
     
     <!-- Visual Basic 런타임 (InputBox 사용) -->
     <PackageReference Include="Microsoft.VisualBasic" Version="10.3.0" />
